[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cache2disk"
version = "4.3.0"
description = "A powerful and robust Python decorator for caching function results to disk."
readme = "README.md"
requires-python = ">=3.6"
license = {text = "MIT License"}
authors = [
  {name = "Atakey", email = "hhl_helonky@163.com"},
]
keywords = ["cache", "disk", "decorator", "performance", "async", "filelock"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
dependencies = [
    "orjson",
    "filelock",
]

[project.urls]
"Homepage" = "https://github.com/Atakey/cache_to_disk"
"Bug Tracker" = "https://github.com/Atakey/cache_to_disk/issues"
